--- a/react/26.路由.md
+++ b/react/26.路由.md
@@ -235,3 +235,129 @@ this.props.match.params.设置的动态路由名称s
         </div>
 ```
 
+### search传递（query，？键值对）
+
+链接后拼接?传值
+
+普通配置
+
+```react
+<Link to='/about?name=zhangpeng&age=18'>关于</Link>
+<Route  path='/about' component={About}/>
+
+
+//取值
+console.log(this.props.location.search)
+```
+
+
+
+### state传值
+
+Link 和 NavLink 中的to 属性一般都传入字符串
+
+可以传入一个对象,要求有如下属性
+
+- pathname:路径，原来的字符串
+- search: query样式的参数传递拼接到字符串
+- hash：#样式的字符串拼接参数传递
+- state:将其中内容保存到location中，可以传入对象
+
+```react
+ <Link to={{
+              pathname:'/detail',
+              state:{
+                id:'123sdfgsdfgds',
+                name:'456'
+              }
+            }}>详情</Link>
+
+//取值
+            this.props.location.state.name
+
+```
+
+# react-router-config
+
+类似vue的路由配置文件包
+
+```shell
+yarn add react-router-config
+```
+
+使用
+
+```js
+{renderRoutes(routes)}
+```
+
+```js
+import Home from "./Home";
+import About, {Culture, History, Jump} from "./About";
+import User from "./User";
+import Login from "./Login";
+import Detail from "./Detail";
+import React from "react";
+const routes = [
+  {
+    path:'/home',
+    component:Home
+  },
+  {
+    path:'/about',
+    component: About,
+    routes:[
+        //子路由
+      {
+        path:'/about',
+        exact:true,
+        component:History
+      },
+      {
+        path:'/about/culture',
+        component:Culture
+      },
+      {
+        path:'/about/history',
+        component:History
+      },
+      {
+        path:'/about/jump',
+        component:Jump
+      }
+    ]
+  },
+  {
+    path:'/detail',
+    component: Detail
+  },
+  {
+    path:'/user/:username',
+    component: User
+  },
+  {
+    path:'/login',
+    component: Login
+  }
+]
+
+export default routes
+```
+
+在子路由中使用
+
+注意这个props对象只有在子路由通过renderRoutes方法产生时才会有这些对象
+
+```js
+ {renderRoutes(this.props.route.routes)}
+```
+
+### 匹配辅助函数
+
+matchRoutes
+
+```js
+const branch = matchRoutes(this.props.route.routes,'/about')
+拿到路由下关于about的所有配置
+```
+
