--- a/react/27.hooks.md
+++ b/react/27.hooks.md
@@ -15,6 +15,7 @@
 - 太过整合无法拆分，逻辑混杂
 
 - this指向麻烦 
+
 - 状态共享方式复杂，如context.provider
 
 # useState
@@ -285,4 +286,130 @@ export default UseReducer;
 # useCallback
 
 目的是进行性能优化。
+
+主要用在将一个组件中的函数传递给子元素进行回调使用时，使用useCallback对函数进行处理
+
+一般跟memo函数组件共同使用
+
+参数1：回调函数
+
+参数2：依赖数组
+
+返回值：回调函数的记忆版本memoized
+
+只有当依赖数组发生改变时，回调函数才会重新执行
+
+demo
+
+```react
+import React,{useState,useCallback,memo} from 'react';
+
+const HyBtn = memo((props)=>{
+  console.log(props.title,'重新渲染')
+  return (
+      <button onClick={props.add}>+1</button>
+  )})
+
+function Callback(props) {
+  const [counter,setCounter] = useState(0)
+  const [show,setShow] = useState(false)
+
+  const add1 = ()=>{
+    console.log('add1')
+    setCounter(counter+1)
+  }
+
+  const add2 = useCallback(()=>{
+    console.log('add2')
+    setCounter(counter+1)
+  },[counter])
+
+  return (
+      <div>
+        <h2>counter:{counter}</h2>
+        <HyBtn title='add1' add={add1}/>
+        <HyBtn title='add2' add={add2}/>
+        <h2>{show}</h2>
+        <button onClick={event => setShow(!show)}>changeShow</button>
+      </div>
+  ;
+}
+
+export default Callback;
+
+```
+
+注意memo会对props进行浅层比较，如果props浅层无变化，则该函数组件不会重新执行
+
+如上实例当show发生改变时，整个大组件重新执行 render 
+
+这时 add 1和add2都进行了重新赋值，只不过使用useCallback的add2依赖无变化，导致返回的回调函数还是上一个，所以子组件浅层比较memo时候props无变化，所以子组件不会重新执行，优化了函数.
+
+#  useMemo
+
+useCallback 传入一个回调函数，最后返回值也是一个函数
+
+useMemo 传入一个函数，这个函数的返回值将作为useMemo的返回值，useMemo可以返回对象，也可以返回一个函数，返回函数的时候就是useCallback
+
+
+
+```js
+useCallback(()=>{
+    console.log('1111')
+},[])
+
+useMemo(()=>{
+    return ()=>{
+        console.log('1111')
+    }
+},[])
+//以上两方法一样
+```
+
+
+
+返回值是一个数字的情况
+
+```react
+import React,{useMemo,useState} from 'react';
+
+  function calc(counter){
+    console.log('重新计算')
+    let res = 0
+    for(let i = 0;i<counter;i++){
+      res += i
+    }
+    return res
+  }
+
+function UseMemoCal(props) {
+  const [counter,setCounter] = useState(1)
+  const [show,setShow] = useState(false)
+
+  let calcMemoRes = useMemo(()=>{
+    //当counter 不改变的时候，这个useMemo就会返回之前的返回值，不会重新调用calc来计算
+    //这里的返回值是一个数
+    return calc(counter)
+  },[counter])
+
+  return (
+      <div>
+        <h2>综合:{calcMemoRes}</h2>
+        <button onClick={event => setCounter(counter+1)}>+1</button>
+        <button onClick={event => setShow(!show)}>changeShow</button>
+      </div>
+  );
+}
+
+export default UseMemoCal;
+
+```
+
+
+
+返回值是对象时，因为重新执行函数式组件时，对于相同内容的对象，也会赋予不同的地址值，所以对于传入另外一个子组件的props是改变的，子组件也要重新渲染，这时内容其实并没有发生变化，
+
+这时使用useMemo返回这个对象，再传入子组件中，对于固定内容的对象是不会导致子组件重新渲染的
+
+
 
