--- a/react/14.ref.md
+++ b/react/14.ref.md
@@ -42,3 +42,31 @@ import {createRef} from 'react'
 - ref放到函数组件中，是无法拿到组件的
 
 - ref不会当属性给子组件传过去
+
+## 函数ref传递forwardRef
+
+函数组件无法直接绑定ref 
+
+```react
+import {forwardRef} from 'react'
+
+const Profile = forwardRef(function(props,ref){
+    return (<p ref={ref}>Profile</p>)
+})
+
+<Profile ref={this.profileRef}/> //这个是createRef 生成的 或这useRef 创建的
+```
+
+通过react自带高阶函数forwardRef 函数组件就多了一个ref参数，就是使用组件传入的，然后通过这个ref就可以拿到函数组件内部的dom
+
+# 子组件的ref
+
+- 子组件是class形式
+
+  其ref是一个react对象，无法拿到其dom，只能做一些子组件对象内部写好的方法，暴露出来给父组件调用，内部的逻辑要写在子组件中
+
+- 子组件是函数形组件
+
+  使用方法就是上面的forwardRef HOC （高阶组件），这样拿到的ref，是可以拿到子组件DOM元素的，权限更大
+
+  可以使用useImperativeHandle这个hook来截取fowardRef 中的ref,返回一个对象，其中可以包含暴露给父组件的权限行为
