--- a/react/27.hooks.md
+++ b/react/27.hooks.md
@@ -411,5 +411,164 @@ export default UseMemoCal;
 
 这时使用useMemo返回这个对象，再传入子组件中，对于固定内容的对象是不会导致子组件重新渲染的
 
+# useRef
 
+不使用createRef 来调用ref
+
+返回值是一个在组件整个生命周期无变化的ref对象
+
+基本使用
+
+```js
+import React,{useRef}from 'react';
+
+class ClaRef extends React.PureComponent{
+  render() {
+    return (
+        <h2>我是类组件</h2>
+    )
+  }
+}
+
+function UseRef(props) {
+  const hRef = useRef();
+  const classRef = useRef();
+
+  function change(){
+    hRef.current.innerHTML = 'hello World'
+     //注意这里只能给类组件放ref 拿到的类组件的对象
+    console.log(classRef)
+  }
+  return (
+      <div>
+        <h2 ref={hRef}>hello</h2>
+        <ClaRef ref={classRef}/>
+        <button onClick={change}>修改内容</button>
+      </div>
+  );
+}
+
+export default UseRef;
+
+```
+
+
+
+参数传入，参数被传入到返回值的ref对象中，整个生命周期无变化
+
+可以用于检测一个state上一次的值
+
+- 执行顺序是，首先改变counter然后重新执行函数组件
+-  由于useRef的返回值是ref对象，在整个生命周期内无变化，所以counterRef还是保存上一次的值
+-   由于counter改变,useEffect调用，改变counterRef的值，但是不会重新渲染函数组件导致显示的还是上一次的值
+
+demo
+
+```react
+import React, {useEffect, useState,useRef} from 'react';
+
+function UseRef2(props) {
+  console.log('重新渲染')
+  const [counter,setCounter] = useState(0)
+
+  const counterRef = useRef(counter)
+  //执行顺序是，首先改变counter然后重新执行函数组件
+  //由于useRef的返回值是ref对象，在整个生命周期内无变化，所以counterRef还是保存上一次的值
+  //由于counter改变,useEffect调用，改变counterRef的值，但是不会重新渲染函数组件导致显示的还是上一次的值
+  useEffect(()=>{
+    counterRef.current = counter
+  },[counter])
+  return (
+      <div>
+        <h2>上一次的值 {counterRef.current}</h2>
+        <h2>zhe一次的值 {counter}</h2>
+        <button onClick={event => setCounter(counter+1)}>+1</button>
+      </div>
+  );
+}
+
+export default UseRef2;
+
+```
+
+# useImperativeHandle
+
+- 子组件是class形式
+
+  其ref是一个react对象，无法拿到其dom，只能做一些子组件对象内部写好的方法，暴露出来给父组件调用，内部的逻辑要写在子组件中
+
+- 子组件是函数形组件
+
+  使用方法就是的forwardRef HOC （高阶组件），这样拿到的ref，是可以拿到子组件DOM元素的，权限更大
+
+  可以使用useImperativeHandle这个hook来截取fowardRef 中的ref,返回一个对象，其中可以包含暴露给父组件的权限行为
+
+作用：限制父组件通过ref获得的权限，不让其拿到DOM实例，截取ref返回一个新的对象来控制其行为
+
+参数
+
+- forwardRef 传入的ref
+- 回调函数，其返回值必须是一个对象，作为暴露给父组件的ref
+- deps，当其改变时才重新执行这个hook，可选
+
+```react
+import React,{useRef, forwardRef, useImperativeHandle}from 'react';
+
+const FuRef = forwardRef((props,ref) => {
+  useImperativeHandle(ref,()=>{
+    return {
+      foo:()=>{
+        console.log('这是我给你的方法')
+      }
+    }
+  })
+
+  return (
+      <h2 ref={ref}>我是函数组件的内部</h2>
+  )
+})
+
+
+
+
+function UseRef(props) {
+  const hRef = useRef();
+  const fuRef = useRef()
+
+  function change(){
+    hRef.current.innerHTML = 'hello World'
+    console.log(fuRef)
+    fuRef.current.foo()
+  }
+  return (
+      <div>
+        <h2 ref={hRef}>hello</h2>
+        <FuRef ref={fuRef}/>
+        <button onClick={change}>修改内容</button>
+      </div>
+  );
+}
+
+export default UseRef;
+
+```
+
+# useLayoutEffect
+
+类似useEffect
+
+- useEffect 默认情况下是didMount,didUpdate,就算是填写deps后，也是每次didMount都会执行，deps改变会执行。不会阻塞DOM
+- useLayoutEffect 是会阻塞DOM渲染，在挂载到DOM之前，第一次类似VUE的created，，每次修改后也是在值挂载在DOM前会执行的
+
+有如下示例
+
+单机按钮，count变成0 ，检测如果count变成0 赋值一个随机数
+
+如果使用useEffect这时会先变成0，渲染DOM，执行useEffect回调函数，setCount将count变成随机数，然后重新执行DOM渲染，会产生闪烁的现象
+
+如果使用useLayoutEffect 就不会出现这种情况
+
+```react
+
+```
 
