--- a/react/27.hooks.md
+++ b/react/27.hooks.md
@@ -26,7 +26,7 @@ useState
 
 本身是一个函数
 
-参数: 给创建出来的状态一个默认值
+参数: 给创建出来的状态一个默认值,可以传入一个函数，返回值是作为默认值
 
 返回值: 是一个数组，
 
@@ -569,6 +569,77 @@ export default UseRef;
 如果使用useLayoutEffect 就不会出现这种情况
 
 ```react
+import React,{useState,useLayoutEffect} from 'react';
+
+function LayoutEffect(props) {
+  const [count,setCount] = useState(10)
+  useLayoutEffect(()=>{
+    if(count === 0){
+      setCount(Math.random())
+    }
+  },[count])
+
+  return (
+      <div>
+        <h2>{count}</h2>
+        <button onClick={event => setCount(0)}>至0</button>
+      </div>
+  );
+}
+
+export default LayoutEffect;
 
 ```
+
+# 自定义HOOK(Custom Hook)
+
+当hook中有相同的逻辑代码时，使用自定义hook来对hook逻辑抽离
+
+因为hook只能在react组件和自定义HOOk中使用
+
+自定义hook的要求就一个点：use函数名开头
+
+## Context共享
+
+由于如果多个文件都要使用context每个都要导入然后使用useContext 很复杂
+
+创建一个自定义HOOk，是一个函数，在里面统一导入context 然后是用useContext
+
+拿到对象，返回一个数组，其他组件直接导入该数组就可以使用了
+
+```react
+import {useContext} from 'react'
+import {UserContext,AgeContext} from "./App";
+
+export default function useShareContext(){
+  const user = useContext(UserContext)
+  const age = useContext(AgeContext)
+
+  return [user,age]
+}
+
+```
+
+## 获取滚动位置
+
+```react
+import React,{useState,useEffect} from 'react';
+
+export default function (){
+  const [pos,setPos] = useState()
+  useEffect(()=>{
+    const getPos = ()=>{
+      setPos(window.scrollY)
+    }
+    document.addEventListener('scroll',getPos)
+    return ()=>{
+      document.removeEventListener('scroll',getPos)
+    }
+  },[pos])
+  return pos
+}
+
+```
+
+
 
