--- a/react/0.快速开发技巧.md
+++ b/react/0.快速开发技巧.md
@@ -25,3 +25,39 @@
 # rsfp
 
 使用PropTypes将无状态的React组件作为命名函数创建
+
+# rmc
+
+一个带memo的react函数组件
+
+
+
+![image-20210311205649648](D:\project\notebook\react\0.快速开发技巧.assets\image-20210311205649648.png)
+
+![image-20210311205910254](D:\project\notebook\react\0.快速开发技巧.assets\image-20210311205910254.png)
+
+
+
+
+
+
+
+
+
+# git commit 
+
+feat：新功能（feature）
+
+fix：修补bug
+
+docs：文档（documentation）
+
+style： 格式（不影响代码运行的变动）
+
+refactor：重构（即不是新增功能，也不是修改bug的代码变动）
+
+test：增加测试
+
+chore：构建过程或辅助工具的变动
+
+
