--- a/react/26.路由.md
+++ b/react/26.路由.md
@@ -28,7 +28,7 @@ h5新增6个api改变url但是不刷新的页面的方法
 # react-router
 
 ```shell
-yarn react-router-dom
+yarn add react-router-dom
 ```
 
 自动安装react-router-dom
@@ -98,6 +98,8 @@ export default App;
 ```
 
 使用已有属性activeStyle
+
+注意添加exact 否则会匹配活跃样式
 
 原理是默认加了一个active 的class属性
 
