--- a/react/25.redux.md
+++ b/react/25.redux.md
@@ -185,7 +185,7 @@ store.dispatch(action4)
 
 - 引入createStore创建的 store对象
 - 引入要使用的action
-- 在componentDidMount中订阅，使用setState保证修改state后调用render函数
+- 在componentDidMount中订阅，使用setState保证使用redux修改state后调用render函数
 - 在componentWillUnmount中取消订阅
 
 demo
@@ -457,6 +457,13 @@ redux-thunk 的作用就是让dispatch可以传入一个函数，我们在函数
       //这里调用普通action通知reducer修改store里面的值
       dispatch(changeBannersAction(res.data.data.banner.list))
     })
+  }
+  
+  //如果有其余参数要进行传递
+  export const getTopBannerAction = (pages) => {
+      return dispatch => {
+          ...
+      }
   }
   ```
 
