--- a/react/27.hooks.md
+++ b/react/27.hooks.md
@@ -643,3 +643,34 @@ export default function (){
 
 
 
+#  redux-redux提供的hook
+
+## useDispatch
+
+放弃使用connect,mapDispatchToProps
+
+const dispatch = useDispatch()
+
+直接拿到dispatch对象，然后拿actionCreators里的action操作
+
+## useSelector
+
+放弃使用mapStateToProps
+
+直接拿到state里的对象
+
+```js
+const {topBanners} = useSelector(state =>({
+  topBanners:state.recommend.topBanners
+}),shallowEqual)
+```
+
+第一个参数：回调函数，参数是state对象，返回一个新的对象表明从state里拿什么值
+
+当state里的一个属性发生改变的时候，useSelector不是使用浅层比较，而是直接使用了一个==来比较，导致的每次函数的返回对象都不相同，所以当当前组件没有依赖的属性发生改变的时候也会重新调用render函数
+
+所以这里引出第二个参数
+
+shallowEqual，浅层比较，一般都传入这个,也是redux-react提供的函数
+
+这个参数传入的是比较方法
