--- a/react/28.数据的不可变性.md
+++ b/react/28.数据的不可变性.md
@@ -36,3 +36,53 @@ object.assign和扩展运算符来解决这个问题
 
 map(浅层转换第一层对象),list（转换数组）,fromJS（无论是数组还是对象，深层进行转换）
 
+
+
+## 与redux的结合
+
+### redux-immutable
+
+首先安装该包
+
+redux-immutable
+
+多个reducer拆分使用 combineReducers 
+
+从该包导入
+
+直接使用
+
+然后获取reducer时
+
+```js
+const {topBanners} = useSelector(state => ({
+    //传入一个可迭代的数组，第一次拿到recommend，第二次拿到topBanners
+  topBanners:state.getIn(['recommend','topBanners'])
+}),shallowEqual)
+```
+
+### 普通redux
+
+```js
+import * as actionTypes from './constans'
+import {Map} from 'immutable'
+//外层包裹
+const defaultState = Map({
+  topBanners:[]
+})
+
+function reducer(state = defaultState,action){
+  switch (action.type){
+    case actionTypes.CHANGE_TOP_BANNERS:
+          //使用immutable内置api
+      return state.set('topBanners',action.topBanners)
+    default:
+      return state;
+  }
+}
+
+export default reducer
+
+
+```
+
