--- a/2020 前端面试题详解文档/要点2.md
+++ b/2020 前端面试题详解文档/要点2.md
@@ -440,6 +440,49 @@ var io = new IntersectionObserver(
 
 当可见度>0时，加载新的元素
 
+# getBoudingClientRect（）
+
+以下是元素全部在视口中可见的函数，亲测有效
+
+```js
+function inViewPort(el) {
+    let doc = document.documentElement
+    let rect = el.getBoundingClientRect()
+    let top = rect.top
+    let bottom = rect.bottom
+    let left = rect.left
+    let right = rect.right
+    if(top>0&&bottom<doc.clientHeight&&left>0&&right<doc.clientWidth){
+        return true
+    }else{
+        return false
+    }
+}
+```
+以下是元素部分在视口中
+
+```js
+function inViewPort(el) {
+        let doc = document.documentElement
+        let rect = el.getBoundingClientRect()
+        let top = rect.top
+        let bottom = rect.bottom
+        let left = rect.left
+        let right = rect.right
+        if(top>0&&top<doc.clientHeight&&left>0&&left<doc.clientWidth){
+            return true
+        }else{
+            return false
+        }
+    }
+```
+
+————————————————
+版权声明：本文为CSDN博主「星海拾遗」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
+原文链接：https://blog.csdn.net/qq_38280242/article/details/104945206
+
+
+
 # js最大安全整数
 
 Number.MAX_SAFE_INTEGER = 2^53-1
@@ -447,23 +490,18 @@ Number.MAX_SAFE_INTEGER = 2^53-1
 # 两大数相加
 
 ```js
-function add(a,b){
-  let value_a = [...a].map(item=> +item).reverse()
-  let value_b = [...b].map(item => +item).reverse()
-  let carry = 0
-  let i = 0 
-  let res = []
-  while(value_a[i] || value_b[i] || carry){
-    let valueA = value_a[i] || 0 
-    let valueB = value_b[i] || 0
-    let sum = valueA + valueB +carry
-    carry = Math.floor(sum/10)
-    res[i] = sum - carry*10
-    i++
-}
-return res.reverse().join('')
-}
-console.log(add('999999','999999'));
+const addStrings = (num1, num2) => {
+  while (num1.length > num2.length) num2 = '0' + num2;
+  while (num1.length < num2.length) num1 = '0' + num1; // 先补0对齐
+  let res = '';     // 结果字符串
+  let carry = 0;    // 进位
+  for (let i = num1.length - 1; i >= 0; i--) { // 加法 从右往左做
+    const sum = +num1[i] + +num2[i] + carry;   // +号将字符转数字
+    res = sum % 10 + res;                      // 模10的结果 + res字符串
+    carry = sum > 9 ? 1 : 0;
+  }
+  return carry == 1 ? '1' + res : res;
+};
 ```
 
 # 防止css重名
