--- a/react/0.快速开发技巧.md
+++ b/react/0.快速开发技巧.md
@@ -32,9 +32,9 @@
 
 
 
-![image-20210311205649648](D:\project\notebook\react\0.快速开发技巧.assets\image-20210311205649648.png)
+![image-20210311205649648](.\0.快速开发技巧.assets\image-20210311205649648.png)
 
-![image-20210311205910254](D:\project\notebook\react\0.快速开发技巧.assets\image-20210311205910254.png)
+![image-20210311205910254](.\0.快速开发技巧.assets\image-20210311205910254.png)
 
 
 
