--- a/react/20.react中的css.md
+++ b/react/20.react中的css.md
@@ -22,7 +22,7 @@ react内置webpack配置
 
 ### 模板字符串来调用函数
 
-![image-20210223234207933](D:\project\notebook\react\20.react中的css.assets\image-20210223234207933.png)
+![image-20210223234207933](.\20.react中的css.assets\image-20210223234207933.png)
 
 ## styled-components
 
