--- a/react/24.过渡动画.md
+++ b/react/24.过渡动画.md
@@ -1,6 +1,6 @@
 # react-transition-group
 
- ![image-20210227195324308](D:\project\notebook\react\24.过渡动画.assets\image-20210227195324308.png)
+ ![image-20210227195324308](.\24.过渡动画.assets\image-20210227195324308.png)
 
 # CSSTransition
 
@@ -8,7 +8,7 @@
 
 
 
-![image-20210227203622057](D:\project\notebook\react\24.过渡动画.assets\image-20210227203622057.png)
+![image-20210227203622057](.\24.过渡动画.assets\image-20210227203622057.png)
 
 <CSSTransition>标签属性 
 
