--- a/react/25.redux.md
+++ b/react/25.redux.md
@@ -426,7 +426,7 @@ ReactDOM.render(
 
 # 中间件（middleware）
 
-![image-20210303193355056](D:\project\notebook\react\25.redux.assets\image-20210303193355056.png)
+![image-20210303193355056](.\25.redux.assets\image-20210303193355056.png)
 
 中间件就是在dispatch action和最终到达reducer之间扩展一些自己的代码
 
