--- a/react/7.脚手架.md
+++ b/react/7.脚手架.md
@@ -1,4 +1,4 @@
-![image-20210213203548587](D:\project\notebook\react\Untitled.assets\image-20210213203548587.png)
+![image-20210213203548587](.\Untitled.assets\image-20210213203548587.png)
 
 # 使用
 
