--- a/react/8.组件化开发.md
+++ b/react/8.组件化开发.md
@@ -81,7 +81,7 @@ export default function App(){
 
 函数组件是没有生命周期函数，通过hooks来模拟一些生命周期函数
 
-![image-20210214201503782](D:\project\notebook\react\8.组件化开发.assets\image-20210214201503782.png)
+![image-20210214201503782](.\8.组件化开发.assets\image-20210214201503782.png)
 
 - constructor ----- created
 
@@ -97,9 +97,9 @@ export default function App(){
 
 - componentWillUnmount (从dom树中移除的时候调用)----- destory
 
-### 显示少的生命周期图谱
+### 显示少的生命周期图谱yj
 
-![image-20210214202811866](D:\project\notebook\react\8.组件化开发.assets\image-20210214202811866.png)
+![image-20210214202811866](.\8.组件化开发.assets\image-20210214202811866.png)
 
 https://projects.wojtekmaj.pl/react-lifecycle-methods-diagram/
 
