--- a/2021面试准备/网络/3.XSS和CSRF.md
+++ b/2021面试准备/网络/3.XSS和CSRF.md
@@ -89,6 +89,15 @@ if (valid) {
 - 禁止未授权的脚本执行（新特性，Google Map 移动版在使用）。
 - 合理使用上报可以及时发现 XSS，利于尽快修复问题。
 
+#### 使用meta标签启用csp
+
+```html
+<meta http-equiv="Content-Security-Policy" content="script-src 'self'; object-src 'none'; style-src cdn.example.org third-party.org; child-src https:">
+
+```
+
+#### http头信息启用csp标签
+
 ### 输入内容长度控制
 
 对于不受信任的输入，都应该限定一个合理的长度。虽然无法完全防止 XSS 发生，但可以增加 XSS 攻击的难度。
@@ -97,3 +106,11 @@ if (valid) {
 
 在输出html的时候进行，尽量少使用v-html/innerHtml
 
+# CSRF
+
+一般通过第三方域名，冒用用户的登录信息进行操作
+
+## 防范措施
+
+- 禁止外域发送请求（同源检测）
+- 提交时要求附加本域才能获取的信息（token）
