--- a/2021面试准备/3.30事件.md
+++ b/2021面试准备/3.30事件.md
@@ -1,8 +1,8 @@
 上午
 
-新算法题1.复习算法题2
+新算法题1.复习算法题2 完成，第k个最大，连续最大和，复习最长不重复子串
 
-react hook背过
+react hook背过 完成
 
 ### https://blog.csdn.net/yexudengzhidao/article/details/100104134
 
