--- a/2021面试准备/4.1.md
+++ b/2021面试准备/4.1.md
@@ -3,3 +3,26 @@
 promise封装ajax
 
 proxy
+
+块级和行级
+
+span的margin和padding
+
+进程和线程，思索
+
+1. DNS和子网以及子网掩码的概念
+2. Ip的主要格式，可以重复使用ip吗 10和192开头的ip为啥不用域名
+3. http和https的区别
+4. 计算机网络 OSI模型7层，每层有哪些协议干了啥都详详细细问了一遍
+5. js超出max safe integer怎么办
+
+1. 建立http连接什么时候断开？
+2. 如果是[keep](https://www.nowcoder.com/jump/super-jump/word?word=keep)-alive 会一直连着吗？
+
+三次
+
+二分 冒泡 归并
+
+深拷贝
+
+https://leetcode-cn.com/problems/merge-intervals/
