--- a/2020 前端面试题详解文档/要点2.md
+++ b/2020 前端面试题详解文档/要点2.md
@@ -81,13 +81,13 @@ viedo标签和audio标签
   这里首先在设置插槽位置使用类似props的传值方法设置
 
   ```html
-  <slot :xxx='xxx'></slot>
+  <slot name='test' :xxx='xxx'></slot>
   ```
 
   使用的时候,使用v-slot后面的=号后的就是接受过来的参数
 
   ```html
-  <template v-solt:default='slotProps'>
+  <template v-solt:test='slotProps'>
     {{slotProps.xxx.data}}
   </template>
   ```
