--- a/2021面试准备/网络/7.http进化.md
+++ b/2021面试准备/网络/7.http进化.md
@@ -14,11 +14,17 @@
 
 **管道化**：**服务器必须按照客户端请求的先后顺序依次回送相应的结果，以保证客户端能够区分出每次请求的响应内容。**不允许同时存在两个**并行的响应**。，`HTTP1.1`还是无法解决队头阻塞（`head of line blocking`）
 
+HTTP Pipelining其实是把**多个HTTP请求放到一个TCP连接中一一发送**，而在发送过程中不需要等待服务器对前一个请求的响应；只不过，客户端还是要按照发送请求的顺序来接收响应。
+
 此外，`HTTP1.1`还加入了**缓存处理（强缓存和协商缓存[[传送门](http://www.yangzicong.com/article/12)]）**新的字段如`cache-control`，支持**断点传输**，以及增加了**Host字段**（使得一个服务器能够用来创建多个Web站点）。
+
+
+
+1.1只是解决了每次请求都要建立一次连接的问题，但是并没有解决队头阻塞的问题
 
 # 2.0
 
-**二进制分帧**：
+**二进制分帧**：在应用层(HTTP2.0)和传输层(TCP or UDP)之间增加一个二进制分帧层。在二进制分帧层上，HTTP 2.0 会将所有传输的信息分割为更小的消息和帧,并对它们采用二进制格式的编码 ，其中HTTP1.x的首部信息会被封装到Headers帧，而我们的request body则封装到Data帧里面。
 
 **多路复用（连接共享）**：`HTTP2.0`实现了真正的并行传输，它能够在一个`TCP`上进行任意数量`HTTP`请求。而这个强大的功能则是基于“二进制分帧”的特性。一个TCP连接可以进行乱序传输
 
