--- a/2021面试准备/操作系统/1.进程和线程.md
+++ b/2021面试准备/操作系统/1.进程和线程.md
@@ -12,3 +12,14 @@ IPC
 
 https://www.dazhuanlan.com/2019/12/24/5e0209b46b860/
 
+### 管道/匿名管道(pipe)
+
+### 信号(Signal)
+
+### 信号量(semaphore)
+
+- **本质** : 是一个**计数器**, 用于记录信号量的值, 用于**同步**多进程对**共享数据**(内存)的访问;
+
+### 套接字
+
+- 本质: 是一种**通信**机制, 通过**网络**实现不在同一主机上的**client / server**进行通信
