--- a/2021面试准备/手写八股文/3.promise封装ajax.md
+++ b/2021面试准备/手写八股文/3.promise封装ajax.md
@@ -21,3 +21,8 @@ function ajax(url, method, data) {
     return p;
 }
 ```
+
+ 0：请求未初始化，还没有调用 open()。 1：请求已经建立，但是还没有发送，还没有调用 send()。 2：请求已发送，正在处理中（通常现在可以从响应中获取内容头）。 3：请求在处理中；通常响应中已有部分数据可用了，没有全部完成。 4：响应已完成；您可以获取并使用服务器的响应了。
+————————————————
+版权声明：本文为CSDN博主「lifushan123」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
+原文链接：https://blog.csdn.net/lifushan123/article/details/44783407
