字节面试前一天，祝我好运

--- a/2021面试准备/js/7.proxy和definedProperty.md
+++ b/2021面试准备/js/7.proxy和definedProperty.md
@@ -31,3 +31,78 @@ unshift
 
 pop
 
+# 自己的理解
+
+## 1.为什么defineProperty无法监听数组的变化
+
+由于数组是一个对象，其中的属性length 的**configurable **为false，导致了一系列改变了数组长度的操作，push等无法被监听到 **不仅仅只是无法监听num[i]=newNum**这种下标值的改变。
+
+# 2.既然push都无法监听，vue2如何做到数组监听的呢
+
+通过对数组对象proto改写，重写push方法
+
+```js
+const aryMethods = ['push', 'pop', 'shift', 'unshift', 'splice', 'sort', 'reverse'];
+const arrayAugmentations = [];
+
+aryMethods.forEach((method)=> {
+
+    // 这里是原生Array的原型方法
+    let original = Array.prototype[method];
+
+   // 将push, pop等封装好的方法定义在对象arrayAugmentations的属性上
+   // 注意：是属性而非原型属性
+    arrayAugmentations[method] = function () {
+        console.log('我被改变啦!');
+
+        // 调用对应的原生方法并返回结果
+        return original.apply(this, arguments);
+    };
+});
+
+let list = ['a', 'b', 'c'];
+// 将我们要监听的数组的原型指针指向上面定义的空数组对象
+// 别忘了这个空数组的属性上定义了我们封装好的push等方法
+list.__proto__ = arrayAugmentations;
+list.push('d');  // 我被改变啦！ 4
+
+// 这里的list2没有被重新定义原型指针，所以就正常输出
+let list2 = ['a', 'b', 'c'];
+list2.push('d');  // 4
+```
+
+## 3.那么proxy是如何做到的呢
+
+首先明确proxy做了什么和definedProperty不一样的事情
+
+definedProperty是在原对象上加入配置，监听
+
+proxy确定好target后进行配置handler最后返回一个新的对象
+
+proxy就是这么设计的
+
+```js
+let arr = [1,2,3]
+
+let p = new Proxy(arr,{
+  get:function(target, p, receiver){
+    console.log('我截取成功了')
+    return Reflect.get(target,p,receiver)
+  },
+  set:function (target, p, value, receiver) {
+    if(value===5){
+      console.log('我他妈精确到个数了')
+    }
+    console.log('你是不是更改了',value)
+    return Reflect.set(target,p,value,receiver)
+  }
+})
+
+// p[1]=4
+p.push('666666')
+p.push('55555')
+```
+
+这里都可以监听的到
+
+**注意push的触发了两次get和set，原因是length也发生了改变**
