--- a/2020 前端面试题详解文档/自我介绍.md
+++ b/2020 前端面试题详解文档/自我介绍.md
@@ -1,2 +1,2 @@
-面试官您好，我是张朋，北京工业大学软件工程专业在读研究生，今年研二，2022年毕业。今天面试的岗位是前端实习生。我的技术栈是js css html vue 。学习前端期间开发过个人博客站和移动端商城，其中使用懒加载完成长列表渲染，封装防抖函数来触发图片加载完成后的回调函数。个人博客站完成了富文本markdown编辑和回显、做到了PC端的响应式。使用了express开发后台接口，熟悉前后端分离开发流程，最后使用pm2和nginx将项目部署到云平台。您好以上是我的个人介绍，谢谢。
+面试官您好，我是张朋，北京工业大学软件工程专业在读研究生，今年研二，2022年毕业。今天面试的岗位是前端实习生。我的技术栈是js css html vue react 。学习前端期间开发过个人博客站和移动端商城，其中使用懒加载完成长列表渲染，封装防抖函数来触发图片加载完成后的回调函数。在京东实习期间主要负责互联网医院Saas管理平台的开发，类似一个千人千面的后台管理系统，根据不同的租户id返回菜单列表。您好以上是我的个人介绍，谢谢。
 
