--- a/2021面试准备/网络/3.XSS和CSRF.md
+++ b/2021面试准备/网络/3.XSS和CSRF.md
@@ -1,5 +1,17 @@
 # XSS
 
+
+
+### XSS 分类
+
+根据攻击的来源，XSS 攻击可分为存储型、反射型和 DOM 型三种。
+
+| 类型       | 存储区*                 | 插入点*         |
+| ---------- | ----------------------- | --------------- |
+| 存储型 XSS | 后端数据库              | HTML            |
+| 反射型 XSS | URL                     | HTML            |
+| DOM 型 XSS | 后端数据库/前端存储/URL | 前端 JavaScript |
+
 ## 案例一：用户输入
 
 ```html
@@ -102,6 +114,10 @@ if (valid) {
 
 对于不受信任的输入，都应该限定一个合理的长度。虽然无法完全防止 XSS 发生，但可以增加 XSS 攻击的难度。
 
+### HTTP ONLY
+
+禁止js读取敏感cookie
+
 ## 转移html
 
 在输出html的时候进行，尽量少使用v-html/innerHtml
@@ -110,7 +126,14 @@ if (valid) {
 
 一般通过第三方域名，冒用用户的登录信息进行操作
 
+跨站请求，浏览器会默认携带a.com的Cookie。
+
 ## 防范措施
 
 - 禁止外域发送请求（同源检测）
 - 提交时要求附加本域才能获取的信息（token）
+
+
+
+
+
