--- a/2021面试准备/手写八股文/6.排序.md
+++ b/2021面试准备/手写八股文/6.排序.md
@@ -24,6 +24,29 @@ function mao(arr){
 
 空间最好o(logn) 最坏 n
 
+```js
+function MySort( arr ) {
+    // write code here
+    if(arr.length <= 1){
+        return arr
+    }
+    let mid = Math.floor(arr.length/2)
+    let midItem = arr.splice(mid,1)
+    let left = []
+    let right = []
+    for(let item of arr ){
+        if(item<midItem){
+            left.push(item)
+        }else{
+            right.push(item)
+        }
+    }
+    return MySort(left).concat(midItem,MySort(right))
+}
+```
+
+
+
 # 归并排序
 
 1. 先拆分，一直拆分到只有一个数
