面试没答上来的

--- a/2021面试准备/4.2.md
+++ b/2021面试准备/4.2.md
@@ -7,3 +7,24 @@ HTTP请求头都有哪些
 XSS具体说明包括类型
 
 React的数据为什么是单向流动的
+
+
+
+
+
+
+
+面试
+
+bfc ifc
+
+clearfix
+
+外边距重叠
+
+vue.router route
+
+vue keep-alive原理
+
+react component 组件和函数组件的区别
+
