‘美团一面后’

--- a/2021面试准备/手写八股文/6.排序.md
+++ b/2021面试准备/手写八股文/6.排序.md
@@ -123,19 +123,18 @@ function cha(arr){
 O(n^2）
 
 ```js
-function sessionSort(arr) {
-    let len = arr.length;
-    for (let i = 0; i < len; i++) {
-        let curr = i;
-        for (let j = i + 1; j < len; j++) {
-            if (arr[j] < arr[curr]) {
-                let temp = arr[curr];
-                arr[curr] = arr[j];
-                arr[j] = temp;
-            }
-        }
+function xuan(arr){
+  for(let i=0;i<arr.length;i++){
+    let min = arr[i]
+    for(let j=i;j<arr.length;j++){
+      if(arr[j]<min){
+        let temp = arr[j]
+        arr[j] = min
+        min = temp
+      }
     }
-    return arr;
+    arr[i] = min
+  }
 }
 ```
 
