--- a/2021面试准备/网络/3.XSS和CSRF.md
+++ b/2021面试准备/网络/3.XSS和CSRF.md
@@ -133,7 +133,17 @@ if (valid) {
 - 禁止外域发送请求（同源检测）
 - 提交时要求附加本域才能获取的信息（token）
 
+## token的用法
 
+放在服务端session中
+
+登陆后给客户端
+
+客户端存在sessionStorage
+
+每次发送请求的时候都给请求带上这个token
+
+冒用发送没法获取
 
 
 
