--- a/2021面试准备/网络/7.常见状态码.md
+++ b/2021面试准备/网络/7.常见状态码.md
@@ -28,7 +28,9 @@
 
 · 404 not found，表示在服务器上没有找到请求的资源
 
-5XX 服务器错误
+：499 nginx代理到一个永远无响应的后端服务器上
+
+ 5XX 服务器错误
 
 · 500 internal sever error，表示服务器端在执行请求时发生了错误
 
