--- a/2021面试准备/4.2.md
+++ b/2021面试准备/4.2.md
@@ -24,3 +24,18 @@ vue keep-alive原理
 
 react component 组件和函数组件的区别
 
+
+
+
+
+
+
+http://www.ruanyifeng.com/blog/2017/09/asmjs_emscripten.html
+
+https://www.jianshu.com/p/bbd6e600c0d3
+
+岛屿数量
+
+
+
+DNS解析顺序
