--- a/2021面试准备/网络/13.cookiesession.md
+++ b/2021面试准备/网络/13.cookiesession.md
@@ -46,3 +46,30 @@ function setCookie(name, value, days) { //设置cookie
                 }
 ```
 
+### [Cookie 的作用域](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Cookies#cookie_的作用域)
+
+`Domain` 和 `Path` 标识定义了Cookie的*作用域：*即允许 Cookie 应该发送给哪些URL。
+
+#### Domain 属性
+
+`Domain` 指定了哪些主机可以接受 Cookie。如果不指定，默认为 [origin](https://developer.mozilla.org/en-US/docs/Glossary/Origin)，**不包含子域名**。如果指定了`Domain`，则一般包含子域名。因此，指定 `Domain` 比省略它的限制要少。但是，当子域需要共享有关用户的信息时，这可能会有所帮助。 
+
+例如，**如果设置 `Domain=mozilla.org`，则 Cookie 也包含在子域名中（如`developer.mozilla.org`）。**
+
+# 设置httpOnly
+
+设置后JS 无法获取cookie 防止XSS
+
+```js
+Set-Cookie: id=a3fWa; Expires=Wed, 21 Oct 2015 07:28:00 GMT; Secure; HttpOnly
+```
+
+
+
+# 设置sameSite
+
+设置后 跨站请求不会被发送，防止CSRF
+
+```js
+Set-Cookie: key=value; SameSite=Strict
+```
