--- a/typescript/2.数据类型.md
+++ b/typescript/2.数据类型.md
@@ -26,6 +26,8 @@ let arr:Array<number> = [1,2,3]
 
 # tuple
 
+数组定义了相同元素的对象，元组定义了不同元素的对象
+
 元组类型，属于数组的一种，可以指定数组里面值的类型
 
 ```ts
@@ -39,3 +41,12 @@ let tuple:[string,number] = ['tom',12]
 # enum
 
 枚举类型
+
+用来限定取值在一定范围内的场景，比如一周只有七天
+
+```typescript
+enum Days {Sun, Mon, Tue, Wed, Thu, Fri, Sat};
+```
+
+枚举值会映射也会反相映射
+
