新增模块化

--- a/git/常用.md
+++ b/git/常用.md
@@ -29,7 +29,7 @@ $ git merge dev //合并指定分支到当前分支
 ```
 
 ```
-$ git branch -d dev //删除dev分支
+$ git branch -d dev //删除dev分支 检查有没有跟head merge
 ```
 
 ```shell
