--- a/nginx/1.概念.md
+++ b/nginx/1.概念.md
@@ -13,7 +13,7 @@ VPN就是正向代理
 
 ### 反向代理
 
-用户通过反向代理服务器来访问隐藏在代理服务器下的服务器，<font color='red'>反向代理隐藏客户端</font>
+用户通过反向代理服务器来访问隐藏在代理服务器下的服务器，<font color='red'>反向代理隐藏服务端</font>
 
 用户只能知道代理服务器的IP，并不知道目标服务器的IP
 
@@ -27,3 +27,43 @@ VPN就是正向代理
 
 把动态资源和动态资源分别部署给不同的服务器
 
+# 反向代理配置
+
+将所有80端口 通过<font style="color:red">虚拟主机</font> www.123.com 代理到 <font style="color:red">真实主机</font> http://127.0.0.1:8080 上
+
+ ```nginx
+server {
+        listen       80;
+        server_name  www.123.com;
+
+        location / {
+            proxy_pass http://127.0.0.1:8080;
+            index  index.html index.htm index.jsp;
+        }
+    }
+ ```
+
+- listen 配置监听
+
+  - ```nginx
+    listen *:80 | *:8080 #监听所有80端口和8080端口
+    listen  IP_address:port   #监听指定的地址和端口号
+    listen  IP_address     #监听指定ip地址所有端口
+    listen port     #监听该端口的所有IP连接
+    ```
+
+- server_name 虚拟主机位置
+
+  - ```nginx
+    server_name   name ...; #正则、准确匹配
+    ```
+
+- location 匹配url
+
+- proxy_pass 代理服务器地址
+
+  - ```nginx
+    proxy_pass URL;
+    ```
+
+- index 首页
