--- a/javascript/进阶/10.generator和Promise.md
+++ b/javascript/进阶/10.generator和Promise.md
@@ -2,7 +2,7 @@
 
 
 
-![image-20210303211520272](D:\project\notebook\javascript\进阶\10.generator和Promise.assets\image-20210303211520272.png)
+![image-20210303211520272](.\10.generator和Promise.assets\image-20210303211520272.png)
 
 - 第一个next执行到yield，打印111
 - value拿到promise对象 then拿到返回值
