--- a/2021面试准备/手写八股文/6.排序.md
+++ b/2021面试准备/手写八股文/6.排序.md
@@ -138,3 +138,31 @@ function xuan(arr){
 }
 ```
 
+# 二分查找
+
+```js
+var search = function(nums, target) {
+  
+  let low = 0
+  let high = nums.length-1
+  let res= -1
+  function loop(low,high){
+    while(low<=high){
+      let mid = Math.floor((low+high)/2)
+      let midItem = nums[mid]
+      if(midItem<target){
+        low = mid+1
+        loop(low,high)
+      }else if(target<midItem){
+        high = mid-1
+        loop(low,high)
+      }else{
+        res = mid
+        break
+      }
+  }
+ 
+  }
+   loop(low,high)
+  return res
+};
