--- a/2021面试准备/网络/3.XSS和CSRF.md
+++ b/2021面试准备/网络/3.XSS和CSRF.md
@@ -128,6 +128,8 @@ if (valid) {
 
 跨站请求，浏览器会默认携带a.com的Cookie。
 
+在同一个浏览器中，用户打开a页面获取cookie，此时打开钓鱼网站，会自动把cookie带过去，然后钓鱼网站请求a页面的接口就可以冒用用户信息，token可以解决这个问题，他不会被自动携带过去。
+
 ## 防范措施
 
 - 禁止外域发送请求（同源检测）
