--- a/2021面试准备/网络/8.跨域终极解答.md
+++ b/2021面试准备/网络/8.跨域终极解答.md
@@ -59,6 +59,10 @@ JSONP优点是简单兼容性好，可用于解决主流浏览器的跨域数据
 - targetOrigin:**通过窗口的origin属性来指定哪些窗口能接收到消息事件**，其值可以是字符串"*"（表示无限制）或者一个URI。在发送消息的时候，如果目标窗口的协议、主机地址或端口这三者的任意一项不匹配targetOrigin提供的值，那么消息就不会被发送；只有三者完全匹配，消息才会被发送。
 - transfer(可选)：是一串和message 同时传递的 Transferable 对象. 这些对象的所有权将被转移给消息的接收方，而发送一方将不再保有所有权。
 
+### 接受方api
+
+> window.onmessage = e => { console.log(e) }
+
 ## websocket 浏览器与服务器的全双工通信
 
 **WebSocket 是一种双向通信协议，在建立连接之后，WebSocket 的 server 与 client 都能主动向对方发送或接收数据**
