--- a/work/11.11.4.md
+++ b/work/11.11.4.md
@@ -1,1 +1,56 @@
-pagemanage页外套div高度的问题
+```js
+[
+   {
+      icon: 'mtdicon mtdicon-file',
+      title: '需求管理',
+      id: '1',
+      children: [
+        {
+          title: '需求申请',
+          id: '1.1',
+          route: '/demandApply',
+        },
+        {
+          title: '需求审批',
+          id: '1.2',
+          route: '/demandApprove',
+        },
+      ],
+    },
+    {
+      icon: 'mtdicon-square-stack-up',
+      title: '事件版本管理',
+      id: '2',
+      route: '/eventVersionList',
+    },
+    {
+      icon: 'mtdicon-slider-settings',
+      title: '参数管理',
+      id: '3',
+      route: '/parameter',
+    },
+  	{
+      icon: 'mtdicon-database-o',
+      title: '价格巡检'，
+      id: '4',
+      children: [
+      	{
+      		title: '价格巡检介绍',
+          id: '4.1',
+          route: '/radarIntroduction',
+    		},
+  			{
+          title: '巡检监控大盘',
+          id: '4.2',
+          route: '/radarMonitor',
+        },
+  			{
+          title: '业务巡检数据',
+          id: '4.2',
+          route: '/radarBusiness',
+        }
+      ]
+    }
+]
+```
+
