--- a/2021面试准备/h5/1.HTML的解析过程.md
+++ b/2021面试准备/h5/1.HTML的解析过程.md
@@ -15,3 +15,20 @@
 　　1）重绘：根据元素的新属性重新绘*9制，使元素呈现新的外观
 　　2）重排：当渲染树中的一部分因为元素的规模尺寸，布局，隐藏等改变而需要重新构建
 　　3）重排必定会引发重绘，但重绘不一定会引发重排**
+
+
+
+
+
+作者：HPYAEyes
+链接：https://www.nowcoder.com/discuss/702216?channel=-1&source_id=discuss_terminal_discuss_history_nctrack&ncTraceId=3d6d3f1262b44647beed70b73d6ae137.408.16287585441703106
+来源：牛客网
+
+
+
+1. 从输入Url到页面渲染发生了什么？写个提纲
+
+- 网络阶段：构建请求行、查询强缓存、DNS解析、建立TCP连接、发送HTTP请求、响应请求 
+- 解析阶段：解析html、构建dom树、计算样式、生成布局树 
+- 渲染阶段：生成图层树、生成绘制列表、生成图块、优先选择视口附近的图块生成位图数据、展示内容 
+
