--- a/javascript/进阶/16.axios封装.md
+++ b/javascript/进阶/16.axios封装.md
@@ -57,7 +57,7 @@ function getBaseUrl() {
   }
 }
 // 封装 各种方法
-export function get(url: string, param: any) {
+export function get<T = any>(url: string, param: any) {
   const params: any = []
   if (param) {
     Object.keys(param).forEach((key: any) => {
@@ -67,11 +67,11 @@ export function get(url: string, param: any) {
     })
     url = url + '?' + params.join('&')
   }
-  return instance.get(url)
+  return instance.get<T>(url)
 }
 
-export function post(url: string, param: any) {
-  return instance.post(url, param)
+export function post<T = any>(url: string, param: any) {
+  return instance.post<T>(url, param)
 }
 
 export function put(url: string, param: any) {
@@ -97,8 +97,15 @@ export default {
 # 使用
 
 ```typescript
+interface ResponseType<T> {
+  code: number
+  message: string
+  data: T
+}
+
+
 export async function getPriceRisk(busiType: number) {
-  return await get('/baidu', { busiType })
+  return await get<ResponseType<xxxx>>('/baidu', { busiType })
 }
 ```
 
