--- a/2021面试准备/网络/3.XSS和CSRF.md
+++ b/2021面试准备/网络/3.XSS和CSRF.md
@@ -128,7 +128,9 @@ if (valid) {
 
 跨站请求，浏览器会默认携带a.com的Cookie。
 
-在同一个浏览器中，用户打开a页面获取cookie，此时打开钓鱼网站，会自动把cookie带过去，然后钓鱼网站请求a页面的接口就可以冒用用户信息，token可以解决这个问题，他不会被自动携带过去。
+在同一个浏览器中，用户打开a页面获取cookie，此时打开钓鱼网站，会自动把cookie带过去，然后钓鱼网站请求a页面的接口就可以冒用用户信息，token可以解决这个问题，**他不会被自动携带过去。**
+
+**注意这里csrf 是从钓鱼网站请求的接口，他无法获取token，只能拿到被自动带过去的cookie**
 
 ## 防范措施
 
