--- a/2021面试准备/网络/2.CORS简单请求和非简单请求.md
+++ b/2021面试准备/网络/2.CORS简单请求和非简单请求.md
@@ -54,6 +54,8 @@ CORS是一个W3C标准，全称是"跨域资源共享"（Cross-origin resource s
 
 非简单请求的CORS请求，会在正式通信之前，增加一次HTTP查询请求，称为"预检"请求（preflight）。
 
+这是发送的是options 类型请求
+
 浏览器先询问服务器，当前网页所在的域名是否在服务器的许可名单之中，以及可以使用哪些HTTP动词和头信息字段。只有得到肯定答复，浏览器才会发出正式的`XMLHttpRequest`请求，否则就报错。
 
 ## 通过预检请求后，就是跟简单请求一样发送正常的请求了
