字节一面前

--- a/2021面试准备/网络/15.HTTP请求头和响应头.md
+++ b/2021面试准备/网络/15.HTTP请求头和响应头.md
@@ -51,3 +51,19 @@
 **Content-Security-Policy, X-Content-Security-Policy,X-WebKit-CSP** 定义内容安全策略
 
 > X-WebKit-CSP: default-src 'self'
+
+
+
+# 浏览器缓存对应
+
+
+
+| 响应头               | 请求头            |
+| -------------------- | ----------------- |
+| Etag                 | If-none-match     |
+| last-modified        | if-modified-since |
+| cach-control:max-age |                   |
+| expires              |                   |
+
+
+
