--- a/2021面试准备/手写八股文/6.排序.md
+++ b/2021面试准备/手写八股文/6.排序.md
@@ -31,7 +31,7 @@ function MySort( arr ) {
         return arr
     }
     let mid = Math.floor(arr.length/2)
-    let midItem = arr.splice(mid,1)
+    let midItem = arr.splice(mid,1)[0]
     let left = []
     let right = []
     for(let item of arr ){
@@ -93,6 +93,8 @@ function merge(array, start, mid, end) {
 先拿一个当已排好的
 
 再拿一个，如果大于现在的这个直接插到后面
+
+从后前往扫描，每当遇到小于的就交换
 
 O(n^2）
 
