--- a/2021面试准备/手写八股文/5.深拷贝.md
+++ b/2021面试准备/手写八股文/5.深拷贝.md
@@ -1,6 +1,6 @@
 ```js
 function shen(obj){
-  if(typeof obj!=="object"|| obj ===null){
+  if(typeof obj!=="object"|| obj ===null || obj.constructor === RegExp || obj.constructor ===Date){
     return obj
   }
   let res = Array.isArray(obj)?[]:{}
@@ -11,6 +11,28 @@ function shen(obj){
   }
   return res
 }
+
+let obj1 = {
+  a: {
+    c: /a/,
+    d: undefined,
+    b: null
+  },
+  b: function () {
+    console.log(this.a)
+  },
+  c: [
+    {
+      a: 'c',
+      b: /b/,
+      c: undefined,
+      d:new Date()
+    },
+    'a',
+    3
+  ]
+}
+let obj2 = shen(obj1);
+console.log(obj2);
 ```
 
-无正则，function date
