--- a/2021面试准备/js/23.loader和plugin的原理.md
+++ b/2021面试准备/js/23.loader和plugin的原理.md
@@ -2,11 +2,25 @@
 
 在 Webpack 运行的生命周期中会广播出许多事件，Plugin 可以监听这些事件，在合适的时机通过 Webpack 提供的 API 改变输出结果。
 
+作用与webpack本身，不仅仅局限于打包。
+
+例如开启多线程打包： HappyPack
+
+热更新:HMR
+
+配置变量:DefinePlugin
+
+
+
 # loader
 
 loader用来处理非js文件
 
 就像一个翻译员，可以通过链式翻译
+
+**仅仅为了处非js文件的 打包**
+
+
 
 以.scss文件为例子：
 
