--- a/2021面试准备/js/4.几种设计模式.md
+++ b/2021面试准备/js/4.几种设计模式.md
@@ -82,3 +82,47 @@ shop.update(9);
 # 发布订阅者模式
 
 https://burning-shadow.github.io/2019/03/31/Vue%E5%8F%8C%E5%90%91%E7%BB%91%E5%AE%9A%E5%8E%9F%E7%90%86%E5%8F%8A%E5%AE%9E%E7%8E%B0/
+
+```js
+class listen {
+  constructor() {
+    this.listener = new Map()
+  }
+
+  add(key,fun) {
+    if(this.listener.has(key)) {
+      this.listener.get(key).push(fun)
+    } else {
+      this.listener.set(key,[])
+      this.listener.get(key).push(fun)
+    }
+  }
+
+  dele(key,fun) {
+    let index =  this.listener.get(key).findIndex(item => {
+      item === fun
+    })
+    this.listener.get(key).splice(index,1)
+  } 
+
+  notify(key) {
+    console.log(this.listener.get(key));
+    this.listener.get(key).map(fun => {
+      fun()
+    })
+  }
+}
+
+let li = new listen()
+li.add('11',() => {
+  console.log('11');
+})
+li.add('11',() => {
+  console.log('22');
+})
+li.dele('11',()=> {
+  console.log('22');
+})
+li.notify('11')
+```
+
