--- a/2021面试准备/手写八股文/9.二叉树前中后非递归.md
+++ b/2021面试准备/手写八股文/9.二叉树前中后非递归.md
@@ -31,7 +31,7 @@ var inorderTraversal = function(root) {
   let res = []
   while(root || arr.length !== 0) {
     while(root) {
-      arr.push(root.left)
+      arr.push(root)
       root = root.left
     }
     let temp = arr.pop()
