--- a/2021面试准备/手写八股文/5.深拷贝.md
+++ b/2021面试准备/手写八股文/5.深拷贝.md
@@ -33,6 +33,9 @@ let obj1 = {
   ]
 }
 let obj2 = shen(obj1);
+obj1.b = undefined
+obj1.c[0].a = 'xxxx'
 console.log(obj2);
+console.log(obj1);
 ```
 
