--- a/多端化/1.pwa技术.md
+++ b/多端化/1.pwa技术.md
@@ -22,6 +22,10 @@
 
 **Service worker**
 
+一个浏览器后端独立运行的脚本
+
+应用： 1.缓存css字体图片等静态资源 2. 缓存一个offline.html 甚至可以像chrome一样缓存一个小游戏
+
 ### 消息推送
 
 [Your First Web Push Notification](https://developers.google.com/web/fundamentals/codelabs/push-notifications/)
