--- a/2021面试准备/操作系统/1.进程和线程.md
+++ b/2021面试准备/操作系统/1.进程和线程.md
@@ -23,3 +23,9 @@ https://www.dazhuanlan.com/2019/12/24/5e0209b46b860/
 ### 套接字
 
 - 本质: 是一种**通信**机制, 通过**网络**实现不在同一主机上的**client / server**进行通信
+
+# 线程通信
+
+postmessage
+
+全局变量
