--- a/2021面试准备/js/2.继承.md
+++ b/2021面试准备/js/2.继承.md
@@ -53,6 +53,8 @@ console.log(child2.arr);
 
 解决了上述的问题
 
+但是缺点在其中 调用了两次父类构造函数导致：子类实例和子类prototype上有重复的属性
+
 ```js
    //解决了 原型链继承和构造函数继承的缺点
         function Father(name, age) {
@@ -75,6 +77,23 @@ console.log(child2.arr);
         console.log(child1);
         console.log(child2);
 ```
+
+
+
+# 寄生组合继承
+
+最成熟的方法
+
+把组合继承的  Child.prototype = new Father();
+
+改成
+
+```js
+Child.prototype = Object.create(Father.prototype)
+Child.prototype.constroctor = Child
+```
+
+
 
 # class和 es5继承的不同
 
