--- a/2021面试准备/vue/混入顺序.md
+++ b/2021面试准备/vue/混入顺序.md
@@ -1,3 +1,6 @@
-- data会合并，发生冲突 以组件的有限
-- 钩子合并，混入钩子在前
-- 方法合并，冲突取组件的
+- **值为对象(components、methods 、computed、data)的选项，混入组件时选项会被合并，键冲突时优先组件，组件中的键会覆盖混入对象的**
+- **值为函数(created、mounted)的选项，混入组件时选项会被合并调用，混合对象里的钩子函数在组件里的钩子函数之前调用**
+
+
+
+混入对象的属性，对于每个使用的组件来说是独立的，并不是共享的
